# DINOH

./: .gitignore  BENCHMARK_CARD.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATA_CARD.md  LICENSE  README.md  environment.yml  eval_dashboard.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: corpus_synthetic.json
docs/: DINOH_Concept_Governance-First-OH-Pipeline_EN_v1.md  PIPELINE_EXPLAINER_SCRIPT_EN.md  TERMINOLOGY_inventory_DINOH_EN-DE.md  concept.md
examples/: 2025-09-12_CDH_0001_ILLUSTRATION_open-public.ohms.xml  viewer.html
examples/corpus_exports/: 2025-09-12_CDH_0001.ohms.xml  2025-09-12_CDH_0001.vtt  2025-09-13_CDH_0002.ohms.xml  2025-09-13_CDH_0002.vtt  2025-09-14_CDH_0003.ohms.xml  2025-09-14_CDH_0003.vtt  2025-09-15_CDH_0004.ohms.xml  2025-09-15_CDH_0004.vtt  2025-09-16_CDH_0005.ohms.xml  2025-09-16_CDH_0005.vtt  2025-09-17_CDH_0006.ohms.xml  2025-09-17_CDH_0006.vtt  2025-09-18_CDH_0007.ohms.xml  2025-09-18_CDH_0007.vtt  2025-09-19_CDH_0008.ohms.xml  2025-09-19_CDH_0008.vtt  2025-09-20_CDH_0009.ohms.xml  (+39 more)
notebooks/: cdh_oh_eval_v1.ipynb
reports/: oh_eval_validation_report.csv  task1_metadata_raw.csv  task1_metadata_summary.csv  task2_segmentation_raw.csv  task2_segmentation_summary.csv  task2_segmentation_summary.tex
schemas/: luxoh_minimal_metadata.schema.json  oh_eval_record.schema.json
tests/: test_corpus.py  test_export.py  test_metrics.py  test_reports.py  test_reports_writers.py  test_schema.py
website/: ARCHITECTURE_naming_v1_EN-DE.md  DINOH_AI-infrastructure_explainer.html  DINOH_architecture-status_EN-DE.html
(+6 files in other folders)
