[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-eval"
version = "1.1.0"
description = "Evaluation logic for the C²DH Oral History multilingual benchmark."
readme = "README.md"
requires-python = ">=3.10"  # Zielumgebungen: 3.10 + 3.11 (Demo-Env-Pin: 3.11, s. environment.yml)
license = { text = "MIT" }
authors = [{ name = "Klaus Behnam Shad" }]
dependencies = [
    "segeval==2.0.11",
    "jsonschema>=4.18,<5.0",  # Import-Zeit: oh_eval.schema (via __init__)
    "pandas>=2.0,<3.0",       # Import-Zeit: oh_eval.corpus/reports (via __init__)
]

[project.optional-dependencies]
notebook = ["pandas>=2.0,<3.0", "jsonschema>=4.18,<5.0", "jupyterlab>=4.0", "notebook>=7.0", "nbconvert>=7.0", "ipykernel>=6.0"]
dashboard = ["streamlit>=1.30", "pandas>=2.0,<3.0"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
